fix: app版本检测
